Restore Vendor SSO swagger annotations
